src/main/java/org/example/chatssecretos/domain/errors/ErrorApp.java
package org.example.chatssecretos.domain.errors;

public sealed interface ErrorApp
        permits ErrorAppDataBase, ErrorAppUser, ErrorAppGroup,
        ErrorAppMessages, ErrorAppSecurity {}